[package]
name = "Mazeir"
authors = ["Scalt"]
version = "0.2.0"
edition = "2021"
license-file = "./LICENSE"
keywords = ['maze', 'depth-first']

[lib]
name = "mazeir"
path = "src/lib.rs"
test = false
doctest = false

[[bin]]
name = "mazeir"
path = "src/cli.rs"
test = false
doctest = false

[[bin]]
name = "mazeir-test"
path = "src/main.rs"

[[test]]
name = "mazeir"
path = "tests/lib.rs"

[dependencies]
rand = "^0.8.5"
rand_xorshift = "^0.3.0"
png = "^0.17.10"
argh = "^0.1.10"
