[package]
name = "Mazeir"
authors = ["Scalt"]
version = "0.2.0"
edition = "2021"
license-file = "./LICENSE"
default-run = "mazeir-cli"
keywords = ['maze', 'depth-first']

[lib]
name = "mazeir"
path = "src/lib.rs"
test = false
doctest = false

[[bin]]
name = "mazeir-cli"
path = "src/bin/cli/mod.rs"


[[test]]
name = "mazeir-test"
path = "tests/lib.rs"

[dependencies]
rand = "^0.8.5"
rand_xorshift = "^0.3.0"
colored = "^2.0.4"
png = "^0.17.10"
clap = { version = "^4.3.24", features = ["derive", "wrap_help"] }
